--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     tools:context=".MainActivity">
 
  <Button
+     android:id="@+id/camera_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     android:onClick="takePicture"
      android:text="Take Picture"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
