--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/itemImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="111dp"
-            android:layout_marginEnd="111dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <!-- Add other UI elements like TextViews for displaying item information here -->
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
+    <ImageView
+        android:id="@+id/itemImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
+
+        <!-- Set the image source using app:srcCompat attribute -->
+
+    </ImageView>
 </RelativeLayout>
